quorum/test/tests/TypeChecker/Pass/ExpAssignNumberBoolean.quorum
number n = cast(number, true)