quorum/test/tests/TypeChecker/Fail/ExpAssignNumObjBoolean.quorum
Number n = cast(Number, true)